--- a/package.json
+++ b/package.json
@@ -8,10 +8,25 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "autoprefixer": "^9.0.2",
+    "axios": "^0.18.0",
+    "cssnano": "^4.0.5",
+    "echarts": "^4.1.0",
+    "js-cookie": "^2.2.0",
+    "normalize.css": "^8.0.0",
+    "postcss-aspect-ratio-mini": "0.0.2",
+    "postcss-cssnext": "^3.1.0",
+    "postcss-import": "^11.1.0",
+    "postcss-px-to-viewport": "0.0.3",
+    "postcss-url": "^7.3.2",
+    "postcss-viewport-units": "^0.1.4",
+    "postcss-write-svg": "^3.0.1",
     "register-service-worker": "^1.0.0",
+    "vant": "^1.1.14",
     "vue": "^2.5.16",
     "vue-router": "^3.0.1",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "vuex-persistedstate": "^2.5.4"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.0-rc.10",
