--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,20 +1,13 @@
 {
-  "name": "construction",
-  "short_name": "construction",
-  "icons": [
-    {
-      "src": "/img/icons/android-chrome-192x192.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "/img/icons/android-chrome-512x512.png",
-      "sizes": "512x512",
-      "type": "image/png"
-    }
-  ],
-  "start_url": "/index.html",
+  "name": "建工施工图审查进度信息查询",
+  "short_name": "建工",
+  "icons": [{
+    "src": "./img/icons/favicon-512x512.ico",
+    "sizes": "512x512",
+    "type": "image/icon"
+  }],
+  "start_url": "./index.html",
   "display": "standalone",
-  "background_color": "#000000",
-  "theme_color": "#4DBA87"
+  "background_color": "#ffffff",
+  "theme_color": "#00A0E9"
 }
