--- a/package.json
+++ b/package.json
@@ -8,25 +8,24 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "autoprefixer": "^9.0.2",
     "axios": "^0.18.0",
-    "cssnano": "^4.0.5",
-    "echarts": "^4.1.0",
-    "js-cookie": "^2.2.0",
+    "cssnano": "^4.1.7",
+    "cssnano-preset-advanced": "^4.0.5",
     "normalize.css": "^8.0.0",
     "postcss-aspect-ratio-mini": "0.0.2",
     "postcss-cssnext": "^3.1.0",
-    "postcss-import": "^11.1.0",
+    "postcss-import": "^12.0.1",
     "postcss-px-to-viewport": "0.0.3",
-    "postcss-url": "^7.3.2",
-    "postcss-viewport-units": "^0.1.4",
+    "postcss-url": "^8.0.0",
+    "postcss-viewport-units": "^0.1.6",
     "postcss-write-svg": "^3.0.1",
-    "register-service-worker": "^1.0.0",
-    "vant": "^1.1.14",
-    "vue": "^2.5.16",
+    "register-service-worker": "^1.5.1",
+    "vant": "^1.3.10",
+    "vue": "^2.5.17",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1",
-    "vuex-persistedstate": "^2.5.4"
+    "vuex-persistedstate": "^2.5.4",
+    "xml": "^1.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.0-rc.10",
