--- a/package.json
+++ b/package.json
@@ -28,11 +28,11 @@
     "xml": "^1.0.1"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.0.0-rc.10",
-    "@vue/cli-plugin-eslint": "^3.0.0-rc.10",
-    "@vue/cli-plugin-pwa": "^3.0.0-rc.10",
-    "@vue/cli-service": "^3.0.0-rc.10",
-    "less": "^3.0.4",
+    "@vue/cli-plugin-babel": "^3.1.0",
+    "@vue/cli-plugin-eslint": "^3.1.3",
+    "@vue/cli-plugin-pwa": "^3.1.0",
+    "@vue/cli-service": "^3.1.1",
+    "less": "^3.8.1",
     "less-loader": "^4.1.0",
     "vue-template-compiler": "^2.5.16"
   }
