--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "construction",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -11,7 +11,7 @@
     "axios": "^0.18.0",
     "cssnano": "^4.1.7",
     "cssnano-preset-advanced": "^4.0.5",
-    "normalize.css": "^8.0.0",
+    "normalize.css": "^8.0.1",
     "postcss-aspect-ratio-mini": "0.0.2",
     "postcss-cssnext": "^3.1.0",
     "postcss-import": "^12.0.1",
@@ -20,20 +20,25 @@
     "postcss-viewport-units": "^0.1.6",
     "postcss-write-svg": "^3.0.1",
     "register-service-worker": "^1.5.1",
-    "vant": "^1.4.1",
+    "vant": "^1.4.7",
     "vue": "^2.5.17",
-    "vue-router": "^3.0.1",
+    "vue-router": "^3.0.2",
     "vuex": "^3.0.1",
-    "vuex-persistedstate": "^2.5.4",
-    "xml": "^1.0.1"
+    "vuex-persistedstate": "^2.5.4"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.1.1",
-    "@vue/cli-plugin-eslint": "^3.1.4",
-    "@vue/cli-plugin-pwa": "^3.1.1",
-    "@vue/cli-service": "^3.1.2",
+    "@vue/cli-plugin-babel": "^3.2.0",
+    "@vue/cli-plugin-eslint": "^3.2.1",
+    "@vue/cli-plugin-pwa": "^3.2.0",
+    "@vue/cli-service": "^3.2.0",
+    "babel-polyfill": "^6.26.0",
     "less": "^3.8.1",
     "less-loader": "^4.1.0",
     "vue-template-compiler": "^2.5.16"
-  }
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not ie <= 8"
+  ]
 }
