--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "postcss-url": "^8.0.0",
     "postcss-viewport-units": "^0.1.6",
     "postcss-write-svg": "^3.0.1",
+    "qrcode": "^1.3.2",
     "register-service-worker": "^1.5.1",
     "vant": "^1.4.7",
     "vue": "^2.5.17",
